<resources>
    <string name="app_name">Nyx.PizzaApp</string>



    //TABLAYOUT TOOLBAR//
    <string name="pizza_tab">Пиццы</string>
    <string name="pasta_tab">Пасты</string>
    <string name="drinks_tab">Напитки</string>




    <string name="company_name">Пиццы и Пасты</string>
    <string name="restaurant_image">Картинка ресторана</string>
    <string name="home_text">Since we opened our doors in 2017, Bits and Pizzas
        has built its reputation as one of America’s best Italian-Digital restaurants. Some
        people believe eating out is about being with your friends and family. We believe that
        good food is best enjoyed while staring at your phone.</string>

    //ORDER ACTIVITY//
    <string name="create_order">Сделать заказ</string>
    <string name="order_name_hint">Ввведите Ваше имя</string>
    <string name="order_details_hint">Комментарии к заказу</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prices">%s ₽</string>
    <string name="image_description">Изображение товара</string>
    <string name="add_order">Добавить к заказу</string>
    <string name="user_add_products">Выбранные товары</string>
    <string name="select_products">Выбранные товары:</string>
    <string name="sum">Сумма заказа: %s ₽</string>
    <string name="button_remove_product">Убрать из заказа</string>
    <string name="button_add_product">Добавить к заказу</string>
    <string name="snackbar_add_product">Товар добавлен в корзину!</string>
    <string name="snackbar_remove_product">Товар удален из корзины!</string>
    <string name="added_on_checked_product">Добавлено!</string>
    <string name="order_phone_hint">Номер телефона</string>
    <string name="quantity_products">Количество товаров: %d шт.</string>
    <string name="Text_no_selected_products">Отсутствуют</string>

    //NAV MENU DRAWER//
    <string name="contacts">Контакты</string>
    <string name="history">История заказов</string>
    <string name="home">Главная</string>
    <string name="menu_products">Меню</string>

    //CONTACTS FRAGMENT//
    <string name="your_city">Ваш город</string>
    <string name="call">Телефон для заказов и справки: </string>
    <string name="mail">Напишите нам на почту по любым вопросам: </string>
    <string name="info_legal_and_pay">Правовая информация</string>
    <string name="legal_info">Правовая информация</string>
    <string name="pay_info">Доставка и оплата</string>
    <string name="social">Наши соцсети</string>
    <string name="moscow_number">+ 7 (495) 555 55 55</string>
    <string name="spb_number">+ 7 (812) 566 56 57</string>
    <string name="kazan_number">+ 7 (843) 655 34 35</string>
    <string name="novosibirsk_number">+ 7 (383) 455 54 35</string>
    <string name="sochi_number">+ 7 (862) 567 76 56</string>
    <string name="farmers_shop_ru">pizzazPastas@restaurant.ru</string>
    <string name="cancel_dialog_sheet">Отменить</string>
    <string name="send_mail">Написать письмо</string>
    <string name="clear_cart">Очистить</string>

    <string-array name="cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Казань</item>
        <item>Новосибирск</item>
        <item>Сочи</item>
    </string-array>

    //LOGIN ACTIVITY//
    <string name="prompt_number_phone">Номер телефона</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="registration_text"><u>Зарегистрироваться</u></string>
    <string name="registration">Регистрация</string>
    <string name="hint_name_registration">Имя</string>
    <string name="hint_phone_registration">Номер телефона</string>
    <string name="hint_email_registration">Email (необязательно)</string>
    <string name="agreement_personal_data_registration">Согласие на передачу персональных данных</string>
    <string name="offers_and_promotions">Подписаться на рассылку предложений и акций (по желанию)</string>
    <string name="apply_registration">Принять</string>
    <string name="logout">Выйти</string>
    <string name="profile">Профиль</string>
    <string name="send_code_verification">Подождите, код отправляется</string>
    <string name="sms_code_verification">Введите код из СМС</string>
    <string name="next">Далее</string>

    <string name="order_datetime">Заказ от %s %s</string>
</resources>