<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_products_menu"
            android:icon="@drawable/icon_menu_products"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/icon_message"
            android:title="@string/contacts" />
    </group>
    <group
        android:id="@+id/message"
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/history" />
    </group>
</menu>